--- a/kid.html
+++ b/kid.html
@@ -3,188 +3,173 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ageflix - Home</title>
+<title>Live Age Analysis</title>
+<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 <style>
-* { box-sizing: border-box; margin:0; padding:0; font-family: Arial, sans-serif; }
-body { background: #000; color: #fff; }
+body { background:#000; color:#fff; font-family: Arial, sans-serif; text-align:center; }
+button { background:#e50914; color:white; border:none; padding:12px 30px; font-size:18px; cursor:pointer; border-radius:5px; margin-top:15px; }
+button:hover { background:#b00610; }
+#webcam-container { position:relative; display:inline-block; margin-top:20px; }
+#label-container { margin-top:15px; font-size:16px; text-align:left; width:400px; margin:auto; }
+video { border:3px solid #e50914; border-radius:10px; }
+#popup, #loading-screen { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.85); display:flex; justify-content:center; align-items:center; z-index:9999; flex-direction: column; }
+.popup-content { background:#111; padding:30px 50px; border-radius:10px; text-align:center; box-shadow:0 0 20px rgba(229,9,20,0.6); }
+.popup-content h2 { font-size:28px; margin-bottom:20px; }
+.popup-content span { color:#e50914; font-weight:bold; }
+.loader { border:6px solid #f3f3f3; border-top:6px solid #e50914; border-radius:50%; width:70px; height:70px; animation:spin 1s linear infinite; margin-bottom:25px; }
+@keyframes spin { 0%{transform:rotate(0deg);} 100%{transform:rotate(360deg);} }
+#countdown-visual { position:absolute; top:10px; left:50%; transform:translateX(-50%); font-size:48px; font-weight:bold; color:red; text-shadow: 0 0 15px red; animation: pulse 1s infinite; }
+@keyframes pulse { 0%{text-shadow:0 0 15px red;} 50%{text-shadow:0 0 30px red;} 100%{text-shadow:0 0 15px red;} }
 
-/* Navbar */
-nav.navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #111;
-  padding: 10px 20px;
-}
-.navbar .logo { font-size: 28px; font-weight: bold; color: #e50914; }
-.navbar ul { display: flex; list-style: none; justify-content: center; flex:2; }
-.navbar ul li { margin: 0 15px; }
-.navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
-.navbar .icon { flex: 1; text-align: right; }
+/* الشريط المتحرك */
+.bar-container { background:#222; border-radius:5px; width:100%; height:25px; margin:6px 0; overflow:hidden; }
+.bar { height:100%; width:0%; background:#e50914; border-radius:5px; transition: width 0.5s; }
+.bar-label { font-weight:bold; color:#fff; margin-bottom:2px; }
 
-/* Marquee */
-.marquee-container { width: 100%; overflow: hidden; background: #222; color: #fff; font-size: 22px; padding: 10px 0; position: relative; }
-.marquee { display: inline-block; white-space: nowrap; animation: marquee 15s linear infinite; }
-@keyframes marquee { 0% { transform: translateX(100%); } 100% { transform: translateX(-100%); } }
-
-/* Banner Slider */
-.banner-slider { position: relative; overflow: hidden; max-width: 100%; height: 400px; margin-bottom:20px; background:#000; }
-.slide { position: absolute; width: 100%; height: 100%; opacity: 0; transition: opacity 1s ease-in-out; }
-.slide.active { opacity: 1; z-index: 2; }
-.slide img { width: 100%; height: 100%; object-fit: cover; }
-.prev, .next { position: absolute; top: 50%; transform: translateY(-50%); background-color: rgba(0,0,0,0.5); color: #fff; border: none; padding: 10px; cursor: pointer; font-size: 24px; z-index: 3; }
-.prev { left: 10px; }
-.next { right: 10px; }
-.dots { position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; z-index: 3; }
-.dot { width: 12px; height: 12px; border-radius: 50%; background-color: rgba(255,255,255,0.5); cursor: pointer; }
-.dot.active { background-color: #fff; }
-
-/* Hero / Webcam */
-section.hero { text-align: center; padding: 20px; }
-section.hero h1 { font-size: 32px; margin-bottom: 10px; }
-section.hero p { font-size: 20px; margin-bottom: 20px; }
-button#startBtn { padding: 10px 20px; font-size: 18px; cursor: pointer; background:#e50914; border:none; color:white; border-radius:5px; }
-#webcam-container, #label-container { margin: 15px auto; }
-
-/* Responsive */
-@media(max-width:768px){
-  .navbar ul { flex: 1; justify-content: space-around; margin:10px 0; }
-  section.hero h1 { font-size: 24px; }
-  section.hero p { font-size: 16px; }
-  button#startBtn { font-size: 16px; }
-  .marquee-container { font-size: 18px; }
-}
+/* إطار متحرك على الفيديو */
+#face-frame { position:absolute; border:3px solid red; border-radius:10px; pointer-events:none; transition:all 0.2s; box-shadow:0 0 15px red; }
 </style>
 </head>
 <body>
 
-<!-- Navbar -->
-<nav class="navbar">
-  <div class="logo">Ageflix</div>
-  <ul>
-    <li><a href="about.html">About</a></li>
-    <li><a href="movies.html">Movies</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-  <div class="icon">🎬</div>
-</nav>
+<h1>Live Age Analysis</h1>
+<p>Watch as we analyze your face and determine your age group!</p>
 
-<!-- Marquee -->
-<div class="marquee-container">
-  <div class="marquee" id="marqueeText"></div>
+<div id="webcam-container">
+  <video id="webcam" width="400" height="300" autoplay muted playsinline></video>
+  <div id="face-frame"></div>
+  <div id="countdown-visual"></div>
 </div>
 
-<!-- Banner Slider -->
-<section class="banner-slider" id="bannerSlider">
-  <div class="slide active"><img src="1.jpg" alt="Banner 1"></div>
-  <div class="slide"><img src="2.jpg" alt="Banner 2"></div>
-  <button class="prev">&#10094;</button>
-  <button class="next">&#10095;</button>
-  <div class="dots"></div>
-</section>
-
-<!-- Hero / Age Detection -->
-<section class="hero">
-  <h1>Welcome to Ageflix</h1>
-  <p>Discover movies according to your age group!</p>
-  <div id="webcam-container"></div>
-  <div id="label-container"></div>
-  <button id="startBtn">Start Camera & Detect Age</button>
-</section>
-
-<!-- Scripts -->
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
+<div id="label-container"></div>
+<button id="startBtn">Start Analysis</button>
 
 <script>
-// Marquee
-const marqueeTextElem = document.getElementById('marqueeText');
-const marqueeMessages = [
-  "Ageflix recommends movies based on your age",
-  "Find the perfect movie for kids, adults, and seniors",
-  "Your personalized movie guide!",
-  "Discover films suitable for your age",
-  "Enjoy movies safely with Ageflix"
-];
-let marqueeIndex = 0;
-function updateMarquee(){ marqueeTextElem.innerText = marqueeMessages[marqueeIndex]; marqueeIndex=(marqueeIndex+1)%marqueeMessages.length; }
-setInterval(updateMarquee,5000);
-updateMarquee();
+const URL = "YOUR_MODEL_URL/"; // ضع رابط النموذج هنا
+let model, webcam, maxPredictions;
 
-// Slider
-const slides=document.querySelectorAll('.slide'), prev=document.querySelector('.prev'), nextBtn=document.querySelector('.next'), dotsContainer=document.querySelector('.dots'); let slideIndex=0;
-function showSlide(i){ if(i<0) slideIndex=slides.length-1; else if(i>=slides.length) slideIndex=0; else slideIndex=i;
-slides.forEach((s,j)=>{ s.classList.remove('active'); if(dotsContainer.children[j]) dotsContainer.children[j].classList.remove('active'); });
-slides[slideIndex].classList.add('active'); if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active'); }
-prev.addEventListener('click',()=>showSlide(slideIndex-1));
-nextBtn.addEventListener('click',()=>showSlide(slideIndex+1));
-slides.forEach((_,i)=>{ const dot=document.createElement('span'); dot.classList.add('dot'); if(i===0) dot.classList.add('active'); dot.addEventListener('click',()=>showSlide(i)); dotsContainer.appendChild(dot); });
-
-// Age Detection
-const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
-let model, webcam, maxPredictions, detected=false;
-
-async function init(){
+async function init() {
   const modelURL = URL + "model.json";
   const metadataURL = URL + "metadata.json";
   model = await tmImage.load(modelURL, metadataURL);
   maxPredictions = model.getTotalClasses();
-  const flip = true;
-  webcam = new tmImage.Webcam(400,300,flip);
-  await webcam.setup(); await webcam.play();
+
+  webcam = new tmImage.Webcam(400, 300, true);
+  await webcam.setup();
   document.getElementById("webcam-container").appendChild(webcam.canvas);
-  showLoadingPopup(); // popup تحميل 20 ثانية
-  window.requestAnimationFrame(loop);
 }
 
-async function loop(){ webcam.update(); await predict(); if(!detected) window.requestAnimationFrame(loop); }
+init();
 
-async function predict(){
-  const prediction = await model.predict(webcam.canvas);
-  let labelContainer = document.getElementById("label-container");
+const startBtn = document.getElementById('startBtn');
+const labelContainer = document.getElementById('label-container');
+const countdownVisual = document.getElementById('countdown-visual');
+const faceFrame = document.getElementById('face-frame');
+let detectedGroup = null;
+
+startBtn.addEventListener('click', async () => {
+  startBtn.style.display = 'none';
+  await webcam.play();
+
   labelContainer.innerHTML = "";
-  prediction.forEach(p=>{ labelContainer.innerHTML += `<p>${p.className}: ${(p.probability*100).toFixed(2)}%</p>`; });
-  const best = prediction.reduce((a,b)=> a.probability>b.probability?a:b);
-  if(best.probability>0.85 && !detected){ detected=true; setTimeout(()=>{ showResultPopup(best.className); }, 20000); } // 20s
-}
+  for(let i=0;i<maxPredictions;i++){
+    const barWrapper = document.createElement('div');
+    const label = document.createElement('div');
+    label.className = "bar-label";
+    label.id = `label-${i}`;
+    const barContainer = document.createElement('div');
+    barContainer.className = "bar-container";
+    const bar = document.createElement('div');
+    bar.className = "bar";
+    bar.id = `bar-${i}`;
+    barContainer.appendChild(bar);
+    barWrapper.appendChild(label);
+    barWrapper.appendChild(barContainer);
+    labelContainer.appendChild(barWrapper);
+  }
 
-function showLoadingPopup(){
-  const popup=document.createElement("div"); popup.id="popup";
-  popup.innerHTML=`<div class="popup-content"><h2>Detecting your age...</h2><div class="loader"></div></div>`;
-  document.body.appendChild(popup);
-}
+  let timeLeft = 20;
+  countdownVisual.innerText = timeLeft;
 
-function showResultPopup(userGroup){
-  const popup=document.getElementById("popup"); popup.innerHTML=`
+  const countdownInterval = setInterval(() => {
+    timeLeft--;
+    countdownVisual.innerText = timeLeft;
+    if(timeLeft <= 0){
+      clearInterval(countdownInterval);
+      const beep = new Audio('https://www.soundjay.com/button/beep-07.wav');
+      beep.play();
+    }
+  }, 1000);
+
+  const predictionInterval = setInterval(async () => {
+    await webcam.update();
+    const prediction = await model.predict(webcam.canvas);
+    
+    prediction.forEach((p,i)=>{
+      document.getElementById(`label-${i}`).innerText = `${p.className}: ${(p.probability*100).toFixed(1)}%`;
+      document.getElementById(`bar-${i}`).style.width = `${(p.probability*100).toFixed(1)}%`;
+    });
+
+    prediction.sort((a,b)=>b.probability-a.probability);
+    const topClass = prediction[0];
+    
+    let color = 'red';
+    if(topClass.className.toLowerCase() === 'kid') color = 'yellow';
+    else if(topClass.className.toLowerCase() === 'adult') color = 'lime';
+    else if(topClass.className.toLowerCase() === 'senior') color = 'cyan';
+
+    faceFrame.style.borderColor = color;
+    faceFrame.style.boxShadow = `0 0 20px ${color}`;
+    faceFrame.style.width = webcam.canvas.width + "px";
+    faceFrame.style.height = webcam.canvas.height + "px";
+    faceFrame.style.top = "0px";
+    faceFrame.style.left = "0px";
+
+  }, 500);
+
+  setTimeout(async () => {
+    clearInterval(predictionInterval);
+    await webcam.update();
+    const prediction = await model.predict(webcam.canvas);
+    prediction.sort((a,b)=>b.probability-a.probability);
+    detectedGroup = prediction[0].className;
+    showPopup(`You are <span>${detectedGroup}</span>`);
+  }, 20000);
+});
+
+function showPopup(message){
+  const popup = document.createElement("div");
+  popup.id = "popup";
+  popup.innerHTML = `
     <div class="popup-content">
-      <h2>You are <span>${userGroup}</span></h2>
-      <div id="camResult"></div>
+      <h2>${message}</h2>
       <button id="nextBtn">Next ➜</button>
-    </div>`;
-  document.getElementById("nextBtn").addEventListener("click",()=>{
-    popup.innerHTML=`<div class="popup-content"><h2>Loading movies suitable for you...</h2><div class="loader"></div></div>`;
-    setTimeout(()=>{
-      if(userGroup.toLowerCase().includes("kid")) window.location.href="kids.html";
-      else if(userGroup.toLowerCase().includes("adult")) window.location.href="adult.html";
-      else if(userGroup.toLowerCase().includes("senior")) window.location.href="senior.html";
-      else window.location.reload();
-    },2000);
+    </div>
+  `;
+  document.body.appendChild(popup);
+
+  document.getElementById('nextBtn').addEventListener('click', ()=>{
+    popup.remove();
+    showLoading(detectedGroup);
   });
 }
 
-document.getElementById("startBtn").addEventListener("click", init);
+function showLoading(group){
+  const loadingScreen = document.createElement("div");
+  loadingScreen.id = "loading-screen";
+  loadingScreen.innerHTML = `
+    <div class="loader"></div>
+    <p class="loading-text">Loading movies suitable for you...</p>
+  `;
+  document.body.appendChild(loadingScreen);
 
-// Styles for popup and loader
-const style = document.createElement("style"); style.innerHTML=`
-@keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
-#popup{position:fixed;top:0;left:0;width:100%;height:100%;background: rgba(0,0,0,0.85); display:flex; justify-content:center; align-items:center; z-index:9999;}
-.popup-content{background:#111; border:2px solid #e50914; padding:30px 50px; border-radius:10px; text-align:center; color:white; box-shadow:0 0 20px rgba(229,9,20,0.6); animation: fadeIn 0.5s ease;}
-.popup-content h2{ font-size:28px; margin-bottom:20px;} .popup-content span{color:#e50914;font-weight:bold;}
-#nextBtn{background-color:#e50914;color:white;border:none;padding:12px 40px;border-radius:5px;font-size:18px;cursor:pointer;transition:0.3s;}
-#nextBtn:hover{background-color:#b00610;}
-.loader{border:6px solid #f3f3f3; border-top:6px solid #e50914; border-radius:50%; width:70px; height:70px; animation:spin 1s linear infinite; margin:20px auto;}
-@keyframes fadeIn{from{opacity:0;transform:scale(0.9);}to{opacity:1;transform:scale(1);}}
-`; document.head.appendChild(style);
+  setTimeout(() => {
+    loadingScreen.remove();
+    if(group.toLowerCase() === "kid") window.location.href = "kids.html";
+    else if(group.toLowerCase() === "adult") window.location.href = "adult.html";
+    else window.location.href = "senior.html";
+  }, 5000);
+}
 </script>
 
 </body>
