--- a/kid.html
+++ b/kid.html
@@ -3,174 +3,129 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Live Age Analysis</title>
-<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+<title>Ageflix</title>
 <style>
-body { background:#000; color:#fff; font-family: Arial, sans-serif; text-align:center; }
-button { background:#e50914; color:white; border:none; padding:12px 30px; font-size:18px; cursor:pointer; border-radius:5px; margin-top:15px; }
-button:hover { background:#b00610; }
-#webcam-container { position:relative; display:inline-block; margin-top:20px; }
-#label-container { margin-top:15px; font-size:16px; text-align:left; width:400px; margin:auto; }
-video { border:3px solid #e50914; border-radius:10px; }
-#popup, #loading-screen { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.85); display:flex; justify-content:center; align-items:center; z-index:9999; flex-direction: column; }
-.popup-content { background:#111; padding:30px 50px; border-radius:10px; text-align:center; box-shadow:0 0 20px rgba(229,9,20,0.6); }
-.popup-content h2 { font-size:28px; margin-bottom:20px; }
-.popup-content span { color:#e50914; font-weight:bold; }
-.loader { border:6px solid #f3f3f3; border-top:6px solid #e50914; border-radius:50%; width:70px; height:70px; animation:spin 1s linear infinite; margin-bottom:25px; }
-@keyframes spin { 0%{transform:rotate(0deg);} 100%{transform:rotate(360deg);} }
-#countdown-visual { position:absolute; top:10px; left:50%; transform:translateX(-50%); font-size:48px; font-weight:bold; color:red; text-shadow: 0 0 15px red; animation: pulse 1s infinite; }
-@keyframes pulse { 0%{text-shadow:0 0 15px red;} 50%{text-shadow:0 0 30px red;} 100%{text-shadow:0 0 15px red;} }
-
-/* الشريط المتحرك */
-.bar-container { background:#222; border-radius:5px; width:100%; height:25px; margin:6px 0; overflow:hidden; }
-.bar { height:100%; width:0%; background:#e50914; border-radius:5px; transition: width 0.5s; }
-.bar-label { font-weight:bold; color:#fff; margin-bottom:2px; }
-
-/* إطار متحرك على الفيديو */
-#face-frame { position:absolute; border:3px solid red; border-radius:10px; pointer-events:none; transition:all 0.2s; box-shadow:0 0 15px red; }
+  * {box-sizing:border-box;margin:0;padding:0;font-family: Arial, sans-serif;}
+  body {background:#000;color:#fff;}
+  .navbar {display:flex;justify-content:space-between;align-items:center;padding:10px 20px;background:#111;}
+  .logo {color:red;font-size:24px;font-weight:bold;}
+  .navbar ul {display:flex;list-style:none;}
+  .navbar ul li {margin:0 15px;}
+  .navbar ul li a {color:#fff;text-decoration:none;font-weight:bold;}
+  .slider {position:relative;width:100%;max-width:800px;margin:20px auto;overflow:hidden;}
+  .slide {width:100%;display:none;}
+  .slide.active {display:block;}
+  .slide img {width:100%;height:400px;object-fit:cover;}
+  /* TM + popups */
+  #webcam-container {text-align:center;margin:20px;}
+  #label-container {margin-top:10px;font-size:18px;}
+  #startBtn {padding:12px 25px;background:red;color:#fff;border:none;font-size:18px;cursor:pointer;border-radius:5px;margin-top:10px;}
+  #popup, #loading-screen {position:fixed;top:0;left:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:rgba(0,0,0,0.85);z-index:9999;flex-direction:column;}
+  .popup-content {background:#111;border:2px solid red;padding:30px 50px;border-radius:10px;text-align:center;}
+  .popup-content h2 {font-size:28px;margin-bottom:20px;}
+  #nextBtn {background:red;color:#fff;border:none;padding:12px 40px;border-radius:5px;font-size:18px;cursor:pointer;}
+  .loader {border:6px solid #f3f3f3;border-top:6px solid red;border-radius:50%;width:70px;height:70px;animation:spin 1s linear infinite;margin-bottom:25px;}
+  @keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
 </style>
 </head>
 <body>
 
-<h1>Live Age Analysis</h1>
-<p>Watch as we analyze your face and determine your age group!</p>
+<!-- Navbar -->
+<nav class="navbar">
+  <div class="logo">Ageflix</div>
+  <ul>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Movies</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</nav>
 
-<div id="webcam-container">
-  <video id="webcam" width="400" height="300" autoplay muted playsinline></video>
-  <div id="face-frame"></div>
-  <div id="countdown-visual"></div>
+<!-- Slider -->
+<div class="slider">
+  <div class="slide active"><img src="1.jpg" alt="1"></div>
+  <div class="slide"><img src="2.jpg" alt="2"></div>
 </div>
 
-<div id="label-container"></div>
-<button id="startBtn">Start Analysis</button>
+<!-- Teachable Machine -->
+<div id="webcam-container">
+  <video id="webcam" width="400" height="300" autoplay muted playsinline></video>
+  <div id="label-container"></div>
+  <button id="startBtn">Start Age Analysis</button>
+</div>
 
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
 <script>
-const URL = "YOUR_MODEL_URL/"; // ضع رابط النموذج هنا
 let model, webcam, maxPredictions;
+const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
+let detected=false;
 
-async function init() {
-  const modelURL = URL + "model.json";
-  const metadataURL = URL + "metadata.json";
-  model = await tmImage.load(modelURL, metadataURL);
+async function initTM(){
+  const modelURL = URL+"model.json";
+  const metadataURL = URL+"metadata.json";
+  model = await tmImage.load(modelURL,metadataURL);
   maxPredictions = model.getTotalClasses();
 
-  webcam = new tmImage.Webcam(400, 300, true);
+  webcam = new tmImage.Webcam(400,300,true);
   await webcam.setup();
+  await webcam.play();
   document.getElementById("webcam-container").appendChild(webcam.canvas);
+
+  countdown(20); // 20 sec countdown
 }
 
-init();
-
-const startBtn = document.getElementById('startBtn');
-const labelContainer = document.getElementById('label-container');
-const countdownVisual = document.getElementById('countdown-visual');
-const faceFrame = document.getElementById('face-frame');
-let detectedGroup = null;
-
-startBtn.addEventListener('click', async () => {
-  startBtn.style.display = 'none';
-  await webcam.play();
-
-  labelContainer.innerHTML = "";
-  for(let i=0;i<maxPredictions;i++){
-    const barWrapper = document.createElement('div');
-    const label = document.createElement('div');
-    label.className = "bar-label";
-    label.id = `label-${i}`;
-    const barContainer = document.createElement('div');
-    barContainer.className = "bar-container";
-    const bar = document.createElement('div');
-    bar.className = "bar";
-    bar.id = `bar-${i}`;
-    barContainer.appendChild(bar);
-    barWrapper.appendChild(label);
-    barWrapper.appendChild(barContainer);
-    labelContainer.appendChild(barWrapper);
-  }
-
-  let timeLeft = 20;
-  countdownVisual.innerText = timeLeft;
-
-  const countdownInterval = setInterval(() => {
-    timeLeft--;
-    countdownVisual.innerText = timeLeft;
-    if(timeLeft <= 0){
-      clearInterval(countdownInterval);
-      const beep = new Audio('https://www.soundjay.com/button/beep-07.wav');
-      beep.play();
-    }
-  }, 1000);
-
-  const predictionInterval = setInterval(async () => {
-    await webcam.update();
-    const prediction = await model.predict(webcam.canvas);
-    
-    prediction.forEach((p,i)=>{
-      document.getElementById(`label-${i}`).innerText = `${p.className}: ${(p.probability*100).toFixed(1)}%`;
-      document.getElementById(`bar-${i}`).style.width = `${(p.probability*100).toFixed(1)}%`;
-    });
-
-    prediction.sort((a,b)=>b.probability-a.probability);
-    const topClass = prediction[0];
-    
-    let color = 'red';
-    if(topClass.className.toLowerCase() === 'kid') color = 'yellow';
-    else if(topClass.className.toLowerCase() === 'adult') color = 'lime';
-    else if(topClass.className.toLowerCase() === 'senior') color = 'cyan';
-
-    faceFrame.style.borderColor = color;
-    faceFrame.style.boxShadow = `0 0 20px ${color}`;
-    faceFrame.style.width = webcam.canvas.width + "px";
-    faceFrame.style.height = webcam.canvas.height + "px";
-    faceFrame.style.top = "0px";
-    faceFrame.style.left = "0px";
-
-  }, 500);
-
-  setTimeout(async () => {
-    clearInterval(predictionInterval);
-    await webcam.update();
-    const prediction = await model.predict(webcam.canvas);
-    prediction.sort((a,b)=>b.probability-a.probability);
-    detectedGroup = prediction[0].className;
-    showPopup(`You are <span>${detectedGroup}</span>`);
-  }, 20000);
-});
-
-function showPopup(message){
-  const popup = document.createElement("div");
-  popup.id = "popup";
-  popup.innerHTML = `
+function countdown(seconds){
+  const popup=document.createElement("div");
+  popup.id="popup";
+  popup.innerHTML=`
     <div class="popup-content">
-      <h2>${message}</h2>
-      <button id="nextBtn">Next ➜</button>
+      <h2>Analyzing your face...</h2>
+      <p id="countdown-text">${seconds} seconds remaining</p>
+      <div id="label-container"></div>
     </div>
   `;
   document.body.appendChild(popup);
 
-  document.getElementById('nextBtn').addEventListener('click', ()=>{
-    popup.remove();
-    showLoading(detectedGroup);
+  let interval=setInterval(async ()=>{
+    document.getElementById("countdown-text").innerText = seconds+" seconds remaining";
+    const prediction = await model.predict(webcam.canvas);
+    const labelContainer = document.getElementById("label-container");
+    labelContainer.innerHTML="";
+    prediction.forEach(p=>{labelContainer.innerHTML+=`${p.className}: ${(p.probability*100).toFixed(1)}%<br>`});
+    seconds--;
+    if(seconds<0){
+      clearInterval(interval);
+      showResult(prediction);
+    }
+  },1000);
+}
+
+function showResult(prediction){
+  const best=prediction.reduce((a,b)=>a.probability>b.probability?a:b);
+  const popup=document.getElementById("popup");
+  popup.innerHTML=`
+    <div class="popup-content">
+      <h2>Your age group is <span>${best.className}</span></h2>
+      <button id="nextBtn">Next ➜</button>
+    </div>
+  `;
+  document.getElementById("nextBtn").addEventListener("click",()=>{
+    popup.innerHTML=`<div class="popup-content"><div class="loader"></div><p>Loading your suitable movies...</p></div>`;
+    setTimeout(()=>{
+      if(best.className.toLowerCase().includes("kid")) window.location.href="kids.html";
+      else if(best.className.toLowerCase().includes("adult")) window.location.href="adult.html";
+      else if(best.className.toLowerCase().includes("senior")) window.location.href="senior.html";
+    },3000);
   });
 }
 
-function showLoading(group){
-  const loadingScreen = document.createElement("div");
-  loadingScreen.id = "loading-screen";
-  loadingScreen.innerHTML = `
-    <div class="loader"></div>
-    <p class="loading-text">Loading movies suitable for you...</p>
-  `;
-  document.body.appendChild(loadingScreen);
+document.getElementById("startBtn").addEventListener("click",initTM);
 
-  setTimeout(() => {
-    loadingScreen.remove();
-    if(group.toLowerCase() === "kid") window.location.href = "kids.html";
-    else if(group.toLowerCase() === "adult") window.location.href = "adult.html";
-    else window.location.href = "senior.html";
-  }, 5000);
-}
+// Slider logic
+let slides=document.querySelectorAll(".slide");
+let current=0;
+setInterval(()=>{slides[current].classList.remove("active");current=(current+1)%slides.length;slides[current].classList.add("active");},5000);
+
 </script>
-
 </body>
 </html>
