--- a/kid.html
+++ b/kid.html
@@ -5,21 +5,24 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ageflix</title>
 <style>
-  * {box-sizing:border-box;margin:0;padding:0;font-family: Arial, sans-serif;}
+  * {margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif;}
   body {background:#000;color:#fff;}
+  /* Navbar */
   .navbar {display:flex;justify-content:space-between;align-items:center;padding:10px 20px;background:#111;}
   .logo {color:red;font-size:24px;font-weight:bold;}
   .navbar ul {display:flex;list-style:none;}
   .navbar ul li {margin:0 15px;}
   .navbar ul li a {color:#fff;text-decoration:none;font-weight:bold;}
+  /* Slider */
   .slider {position:relative;width:100%;max-width:800px;margin:20px auto;overflow:hidden;}
   .slide {width:100%;display:none;}
   .slide.active {display:block;}
   .slide img {width:100%;height:400px;object-fit:cover;}
-  /* TM + popups */
+  /* Teachable Machine */
   #webcam-container {text-align:center;margin:20px;}
-  #label-container {margin-top:10px;font-size:18px;}
+  #webcam-container video {border:2px solid red;border-radius:10px;}
   #startBtn {padding:12px 25px;background:red;color:#fff;border:none;font-size:18px;cursor:pointer;border-radius:5px;margin-top:10px;}
+  /* Popups */
   #popup, #loading-screen {position:fixed;top:0;left:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:rgba(0,0,0,0.85);z-index:9999;flex-direction:column;}
   .popup-content {background:#111;border:2px solid red;padding:30px 50px;border-radius:10px;text-align:center;}
   .popup-content h2 {font-size:28px;margin-bottom:20px;}
