--- a/kid.html
+++ b/kid.html
@@ -5,30 +5,30 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ageflix</title>
 <style>
-  * {margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif;}
-  body {background:#000;color:#fff;}
+  *{margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif;}
+  body{background:#000;color:#fff;}
   /* Navbar */
-  .navbar {display:flex;justify-content:space-between;align-items:center;padding:10px 20px;background:#111;}
-  .logo {color:red;font-size:24px;font-weight:bold;}
-  .navbar ul {display:flex;list-style:none;}
-  .navbar ul li {margin:0 15px;}
-  .navbar ul li a {color:#fff;text-decoration:none;font-weight:bold;}
+  .navbar{display:flex;justify-content:space-between;align-items:center;padding:10px 20px;background:#111;}
+  .logo{color:red;font-size:24px;font-weight:bold;}
+  .navbar ul{display:flex;list-style:none;}
+  .navbar ul li{margin:0 15px;}
+  .navbar ul li a{color:#fff;text-decoration:none;font-weight:bold;}
   /* Slider */
-  .slider {position:relative;width:100%;max-width:800px;margin:20px auto;overflow:hidden;}
-  .slide {width:100%;display:none;}
-  .slide.active {display:block;}
-  .slide img {width:100%;height:400px;object-fit:cover;}
-  /* Teachable Machine */
-  #webcam-container {text-align:center;margin:20px;}
-  #webcam-container video {border:2px solid red;border-radius:10px;}
-  #startBtn {padding:12px 25px;background:red;color:#fff;border:none;font-size:18px;cursor:pointer;border-radius:5px;margin-top:10px;}
+  .slider{position:relative;width:100%;max-width:800px;margin:20px auto;overflow:hidden;}
+  .slide{width:100%;display:none;}
+  .slide.active{display:block;}
+  .slide img{width:100%;height:400px;object-fit:cover;}
   /* Popups */
-  #popup, #loading-screen {position:fixed;top:0;left:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:rgba(0,0,0,0.85);z-index:9999;flex-direction:column;}
-  .popup-content {background:#111;border:2px solid red;padding:30px 50px;border-radius:10px;text-align:center;}
-  .popup-content h2 {font-size:28px;margin-bottom:20px;}
-  #nextBtn {background:red;color:#fff;border:none;padding:12px 40px;border-radius:5px;font-size:18px;cursor:pointer;}
-  .loader {border:6px solid #f3f3f3;border-top:6px solid red;border-radius:50%;width:70px;height:70px;animation:spin 1s linear infinite;margin-bottom:25px;}
+  #popup,#loading-screen{position:fixed;top:0;left:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:rgba(0,0,0,0.95);z-index:9999;flex-direction:column;}
+  .popup-content{background:#111;border:3px solid red;padding:30px 50px;border-radius:10px;text-align:center;max-width:600px;}
+  .popup-content h2{font-size:32px;margin-bottom:20px;}
+  #nextBtn{background:red;color:#fff;border:none;padding:12px 40px;border-radius:5px;font-size:20px;cursor:pointer;margin-top:20px;}
+  .loader{border:6px solid #f3f3f3;border-top:6px solid red;border-radius:50%;width:70px;height:70px;animation:spin 1s linear infinite;margin-bottom:25px;}
   @keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
+  #countdown-bar{width:100%;height:20px;background:#444;border-radius:10px;margin-top:15px;overflow:hidden;}
+  #countdown-fill{width:100%;height:100%;background:red;}
+  #label-container{font-size:20px;margin-top:15px;}
+  #webcam-canvas{border:2px solid red;border-radius:10px;margin-top:15px;}
 </style>
 </head>
 <body>
@@ -49,11 +49,9 @@
   <div class="slide"><img src="2.jpg" alt="2"></div>
 </div>
 
-<!-- Teachable Machine -->
-<div id="webcam-container">
-  <video id="webcam" width="400" height="300" autoplay muted playsinline></video>
-  <div id="label-container"></div>
-  <button id="startBtn">Start Age Analysis</button>
+<!-- Start Button -->
+<div style="text-align:center;margin-top:20px;">
+  <button id="startBtn" style="padding:15px 30px;font-size:20px;background:red;color:white;border:none;border-radius:8px;cursor:pointer;">Start Age Analysis</button>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
@@ -61,7 +59,6 @@
 <script>
 let model, webcam, maxPredictions;
 const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
-let detected=false;
 
 async function initTM(){
   const modelURL = URL+"model.json";
@@ -72,29 +69,41 @@ async function initTM(){
   webcam = new tmImage.Webcam(400,300,true);
   await webcam.setup();
   await webcam.play();
-  document.getElementById("webcam-container").appendChild(webcam.canvas);
 
-  countdown(20); // 20 sec countdown
+  showPopup();
 }
 
-function countdown(seconds){
+function showPopup(){
   const popup=document.createElement("div");
   popup.id="popup";
   popup.innerHTML=`
     <div class="popup-content">
       <h2>Analyzing your face...</h2>
-      <p id="countdown-text">${seconds} seconds remaining</p>
+      <canvas id="webcam-canvas" width="400" height="300"></canvas>
       <div id="label-container"></div>
+      <div id="countdown-bar"><div id="countdown-fill"></div></div>
     </div>
   `;
   document.body.appendChild(popup);
 
-  let interval=setInterval(async ()=>{
-    document.getElementById("countdown-text").innerText = seconds+" seconds remaining";
+  document.getElementById("webcam-canvas").replaceWith(webcam.canvas);
+  webcam.canvas.id="webcam-canvas";
+
+  let totalTime=20;
+  let seconds=totalTime;
+  const countdownFill = document.getElementById("countdown-fill");
+
+  const interval=setInterval(async ()=>{
     const prediction = await model.predict(webcam.canvas);
     const labelContainer = document.getElementById("label-container");
     labelContainer.innerHTML="";
-    prediction.forEach(p=>{labelContainer.innerHTML+=`${p.className}: ${(p.probability*100).toFixed(1)}%<br>`});
+    prediction.forEach(p=>{
+      labelContainer.innerHTML+=`${p.className}: ${(p.probability*100).toFixed(1)}%<br>`;
+    });
+
+    // Update countdown bar
+    countdownFill.style.width = `${(seconds/totalTime)*100}%`;
+
     seconds--;
     if(seconds<0){
       clearInterval(interval);
@@ -109,9 +118,19 @@ function showResult(prediction){
   popup.innerHTML=`
     <div class="popup-content">
       <h2>Your age group is <span>${best.className}</span></h2>
+      <canvas id="webcam-canvas" width="400" height="300"></canvas>
+      <div id="label-container"></div>
       <button id="nextBtn">Next ➜</button>
     </div>
   `;
+  document.getElementById("webcam-canvas").replaceWith(webcam.canvas);
+  webcam.canvas.id="webcam-canvas";
+
+  const labelContainer = document.getElementById("label-container");
+  prediction.forEach(p=>{
+    labelContainer.innerHTML+=`${p.className}: ${(p.probability*100).toFixed(1)}%<br>`;
+  });
+
   document.getElementById("nextBtn").addEventListener("click",()=>{
     popup.innerHTML=`<div class="popup-content"><div class="loader"></div><p>Loading your suitable movies...</p></div>`;
     setTimeout(()=>{
@@ -122,13 +141,12 @@ function showResult(prediction){
   });
 }
 
-document.getElementById("startBtn").addEventListener("click",initTM);
-
 // Slider logic
 let slides=document.querySelectorAll(".slide");
 let current=0;
 setInterval(()=>{slides[current].classList.remove("active");current=(current+1)%slides.length;slides[current].classList.add("active");},5000);
 
+document.getElementById("startBtn").addEventListener("click",initTM);
 </script>
 </body>
 </html>
