--- a/kid.html
+++ b/kid.html
@@ -3,37 +3,45 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ageflix</title>
+<title>Ageflix - Home</title>
 <style>
-  *{margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif;}
-  body{background:#000;color:#fff;}
-  /* Navbar */
-  .navbar{display:flex;justify-content:space-between;align-items:center;padding:10px 20px;background:#111;}
-  .logo{color:red;font-size:24px;font-weight:bold;}
-  .navbar ul{display:flex;list-style:none;}
-  .navbar ul li{margin:0 15px;}
-  .navbar ul li a{color:#fff;text-decoration:none;font-weight:bold;}
-  /* Slider */
-  .slider{position:relative;width:100%;max-width:800px;margin:20px auto;overflow:hidden;}
-  .slide{width:100%;display:none;}
-  .slide.active{display:block;}
-  .slide img{width:100%;height:400px;object-fit:cover;}
-  /* Popups */
-  #popup,#loading-screen{position:fixed;top:0;left:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:rgba(0,0,0,0.95);z-index:9999;flex-direction:column;}
-  .popup-content{background:#111;border:3px solid red;padding:30px 50px;border-radius:10px;text-align:center;max-width:600px;}
-  .popup-content h2{font-size:32px;margin-bottom:20px;}
-  #nextBtn{background:red;color:#fff;border:none;padding:12px 40px;border-radius:5px;font-size:20px;cursor:pointer;margin-top:20px;}
-  .loader{border:6px solid #f3f3f3;border-top:6px solid red;border-radius:50%;width:70px;height:70px;animation:spin 1s linear infinite;margin-bottom:25px;}
-  @keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
-  #countdown-bar{width:100%;height:20px;background:#444;border-radius:10px;margin-top:15px;overflow:hidden;}
-  #countdown-fill{width:100%;height:100%;background:red;transition:width 1s linear;}
-  #label-container{font-size:20px;margin-top:10px;}
-  #webcam-canvas{border:5px solid red;border-radius:10px;box-shadow:0 0 20px red;transition:box-shadow 0.5s ease;}
+*{margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif;}
+body{background:#000;color:#fff;}
+nav.navbar{display:flex;align-items:center;justify-content:space-between;background:#111;padding:10px 20px;}
+.navbar .logo{color:red;font-size:28px;font-weight:bold;flex:1;}
+.navbar ul{display:flex;list-style:none;flex:2;justify-content:center;}
+.navbar ul li{margin:0 15px;}
+.navbar ul li a{color:#fff;text-decoration:none;font-weight:bold;}
+.navbar .icon{flex:1;text-align:right;font-size:24px;}
+.banner-slider{position:relative;overflow:hidden;max-width:100%;height:400px;margin:20px 0;}
+.slide{position:absolute;width:100%;height:100%;opacity:0;transition:opacity 1s;}
+.slide.active{opacity:1;z-index:2;}
+.slide img{width:100%;height:100%;object-fit:cover;}
+.prev,.next{position:absolute;top:50%;transform:translateY(-50%);background:rgba(0,0,0,0.5);color:#fff;border:none;padding:10px;font-size:24px;cursor:pointer;z-index:3;}
+.prev{left:10px;}
+.next{right:10px;}
+.dots{position:absolute;bottom:10px;left:50%;transform:translateX(-50%);display:flex;gap:8px;z-index:3;}
+.dot{width:12px;height:12px;border-radius:50%;background:rgba(255,255,255,0.5);cursor:pointer;}
+.dot.active{background:#fff;}
+button#startBtn{padding:12px 30px;font-size:18px;background:#e50914;color:#fff;border:none;border-radius:5px;cursor:pointer;margin:20px auto;display:block;}
+@media(max-width:768px){.navbar ul{flex:1;justify-content:space-around;} .banner-slider{height:250px;}}
+/* Popup Styles */
+#popup{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.9);display:flex;justify-content:center;align-items:center;z-index:9999;}
+.popup-content{background:#111;border:2px solid #e50914;padding:20px 40px;border-radius:12px;text-align:center;color:#fff;max-width:500px;width:90%;animation:fadeIn 0.5s;}
+.popup-content h2{margin-bottom:20px;}
+#nextBtn{background:#e50914;color:#fff;border:none;padding:12px 30px;border-radius:5px;font-size:18px;cursor:pointer;margin-top:20px;}
+#nextBtn:hover{background:#b00610;}
+#loading-screen{position:fixed;top:0;left:0;width:100%;height:100%;background:#000;display:flex;flex-direction:column;justify-content:center;align-items:center;z-index:99999;}
+.loader{border:6px solid #f3f3f3;border-top:6px solid #e50914;border-radius:50%;width:70px;height:70px;animation:spin 1s linear infinite;margin-bottom:20px;}
+.loading-text{font-size:20px;color:#fff;margin-top:10px;}
+@keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
+@keyframes fadeIn{from{opacity:0;transform:scale(0.9);}to{opacity:1;transform:scale(1);}}
+#countdown-bar{width:100%;height:10px;background:#333;border-radius:5px;margin-top:15px;}
+#countdown-fill{width:0%;height:100%;background:#e50914;border-radius:5px;}
 </style>
 </head>
 <body>
 
-<!-- Navbar -->
 <nav class="navbar">
   <div class="logo">Ageflix</div>
   <ul>
@@ -41,75 +49,64 @@
     <li><a href="#">Movies</a></li>
     <li><a href="#">Contact</a></li>
   </ul>
+  <div class="icon">🎬</div>
 </nav>
 
-<!-- Slider -->
-<div class="slider">
-  <div class="slide active"><img src="1.jpg" alt="1"></div>
-  <div class="slide"><img src="2.jpg" alt="2"></div>
-</div>
+<section class="banner-slider">
+  <div class="slide active"><img src="1.jpg" alt="Banner 1"></div>
+  <div class="slide"><img src="2.jpg" alt="Banner 2"></div>
+  <button class="prev">&#10094;</button>
+  <button class="next">&#10095;</button>
+  <div class="dots"></div>
+</section>
 
-<!-- Start Button -->
-<div style="text-align:center;margin-top:20px;">
-  <button id="startBtn" style="padding:15px 30px;font-size:20px;background:red;color:white;border:none;border-radius:8px;cursor:pointer;">Start Age Analysis</button>
-</div>
+<button id="startBtn">Start Camera & Detect Age</button>
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
 <script>
-let model, webcam, maxPredictions;
 const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
+let model, webcam, maxPredictions;
 
-async function initTM(){
-  const modelURL = URL+"model.json";
-  const metadataURL = URL+"metadata.json";
-  model = await tmImage.load(modelURL,metadataURL);
+async function init(){
+  const modelURL = URL + "model.json";
+  const metadataURL = URL + "metadata.json";
+  model = await tmImage.load(modelURL, metadataURL);
   maxPredictions = model.getTotalClasses();
 
   webcam = new tmImage.Webcam(400,300,true);
   await webcam.setup();
   await webcam.play();
-
-  showAnalysis();
+  showPopupAnalysis();
 }
 
-function showAnalysis(){
+function showPopupAnalysis(){
   const popup=document.createElement("div");
   popup.id="popup";
   popup.innerHTML=`
     <div class="popup-content">
       <h2>Analyzing your face...</h2>
-      <canvas id="webcam-canvas" width="400" height="300"></canvas>
+      <div id="webcam-container"></div>
       <div id="label-container"></div>
       <div id="countdown-bar"><div id="countdown-fill"></div></div>
     </div>
   `;
   document.body.appendChild(popup);
 
-  const canvasEl = document.getElementById("webcam-canvas");
-  canvasEl.replaceWith(webcam.canvas);
-  webcam.canvas.id="webcam-canvas";
+  document.getElementById("webcam-container").appendChild(webcam.canvas);
 
-  let totalTime=20;
-  let seconds=totalTime;
-  const countdownFill = document.getElementById("countdown-fill");
+  let countdown=20;
+  const countdownFill=document.getElementById("countdown-fill");
+  const labelContainer=document.getElementById("label-container");
 
   const interval=setInterval(async ()=>{
-    const prediction = await model.predict(webcam.canvas);
-    const labelContainer = document.getElementById("label-container");
+    countdown--;
+    countdownFill.style.width=((20-countdown)/20*100)+'%';
+
+    const prediction=await model.predict(webcam.canvas);
     labelContainer.innerHTML="";
-    prediction.forEach(p=>{
-      labelContainer.innerHTML+=`${p.className}: ${(p.probability*100).toFixed(1)}%<br>`;
-    });
-
-    countdownFill.style.width = `${(seconds/totalTime)*100}%`;
-
-    // Glow effect
-    const glowIntensity = Math.floor(Math.random()*30)+20;
-    webcam.canvas.style.boxShadow = `0 0 ${glowIntensity}px red`;
-
-    seconds--;
-    if(seconds<0){
+    prediction.forEach(p=>labelContainer.innerHTML+=`<p>${p.className}: ${(p.probability*100).toFixed(1)}%</p>`);
+    if(countdown<=0){
       clearInterval(interval);
       showResult(prediction);
     }
@@ -117,31 +114,66 @@ function showAnalysis(){
 }
 
 function showResult(prediction){
-  const best=prediction.reduce((a,b)=>a.probability>b.probability?a:b);
   const popup=document.getElementById("popup");
-  popup.innerHTML=`
-    <div class="popup-content">
-      <h2>Your age group is <span>${best.className}</span></h2>
-      <button id="nextBtn">Next ➜</button>
-    </div>
+  popup.querySelector(".popup-content").innerHTML=`
+    <h2>Your Age Group is...</h2>
+    <div id="label-container"></div>
+    <button id="nextBtn">Next ➜</button>
   `;
+  const labelContainer=document.getElementById("label-container");
+  const best=prediction.reduce((a,b)=>a.probability>b.probability?a:b);
+  labelContainer.innerHTML=`<p>${best.className}: ${(best.probability*100).toFixed(1)}%</p>`;
 
-  document.getElementById("nextBtn").addEventListener("click",()=>{
-    popup.innerHTML=`<div class="popup-content"><div class="loader"></div><p>Loading your suitable movies...</p></div>`;
-    setTimeout(()=>{
-      if(best.className.toLowerCase().includes("kid")) window.location.href="kids.html";
-      else if(best.className.toLowerCase().includes("adult")) window.location.href="adult.html";
-      else if(best.className.toLowerCase().includes("senior")) window.location.href="senior.html";
-    },3000);
+  document.getElementById("nextBtn").addEventListener("click", ()=>{
+    popup.remove();
+    showLoading(best.className);
   });
 }
 
-// Slider logic
-let slides=document.querySelectorAll(".slide");
-let current=0;
-setInterval(()=>{slides[current].classList.remove("active");current=(current+1)%slides.length;slides[current].classList.add("active");},5000);
+function showLoading(userGroup){
+  const loadingScreen=document.createElement("div");
+  loadingScreen.id="loading-screen";
+  loadingScreen.innerHTML=`
+    <div class="loader"></div>
+    <div class="loading-text">Loading movies suitable for you...</div>
+  `;
+  document.body.appendChild(loadingScreen);
+  setTimeout(()=>{
+    loadingScreen.remove();
+    if(userGroup.toLowerCase()==="kids"||userGroup.toLowerCase()==="kid") location.href="kids.html";
+    else if(userGroup.toLowerCase()==="adult") location.href="adult.html";
+    else if(userGroup.toLowerCase()==="senior") location.href="senior.html";
+    else location.reload();
+  },3000);
+}
 
-document.getElementById("startBtn").addEventListener("click",initTM);
+// Banner Slider
+const slides=document.querySelectorAll('.slide');
+const prev=document.querySelector('.prev');
+const nextBtn=document.querySelector('.next');
+const dotsContainer=document.querySelector('.dots');
+let slideIndex=0;
+function showSlide(index){
+  if(index<0) slideIndex=slides.length-1;
+  else if(index>=slides.length) slideIndex=0;
+  else slideIndex=index;
+  slides.forEach((s,i)=>{s.classList.remove('active');if(dotsContainer.children[i])dotsContainer.children[i].classList.remove('active');});
+  slides[slideIndex].classList.add('active');
+  if(dotsContainer.children[slideIndex])dotsContainer.children[slideIndex].classList.add('active');
+}
+slides.forEach((_,i)=>{
+  const dot=document.createElement('div');
+  dot.classList.add('dot');
+  if(i===0) dot.classList.add('active');
+  dot.addEventListener('click',()=>showSlide(i));
+  dotsContainer.appendChild(dot);
+});
+prev.addEventListener('click',()=>showSlide(slideIndex-1));
+nextBtn.addEventListener('click',()=>showSlide(slideIndex+1));
+setInterval(()=>showSlide(slideIndex+1),5000);
+
+// Start Button
+document.getElementById("startBtn").addEventListener("click",()=>init());
 </script>
 </body>
 </html>
