--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 <nav class="navbar">
   <div class="logo">Ageflix</div>
   <ul>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Movies</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="about.html">About</a></li>
+ 
+    <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
 
@@ -181,3 +181,4 @@ document.getElementById("startBtn").addEventListener("click", init);
 
 </body>
 </html>
+
